force-app/main/default/objects/SvfReportFile__mdt/SvfReportFile__mdt.object-meta.xml
<CustomObject>
    <label>Svfレポートファイル</label>
</CustomObject>