force-app/main/default/objects/SvfReportFile__mdt/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <label>ファイル名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>