force-app/main/default/objects/SvfReportFile__mdt/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>レポート</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>